--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "deploy": "node scripts/deploy.js",
-    "build": "npx hardhat compile && next build",
-    "dev": "concurrently \"npx hardhat compile\" \"npm run deploy\" \"next dev\"",
+    "compile": "npx hardhat compile",
+    "build": "next build",
+    "dev": "next dev",
     "start": "next start",
     "lint": "next lint"
   },
@@ -39,7 +39,6 @@
     "deficonnect": "^1.1.14",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.6.9",
-    "fs": "^0.0.1-security",
     "hardhat": "^2.4.1",
     "http": "^0.0.1-security",
     "ipfs-http-client": "50.1.2",
@@ -47,6 +46,7 @@
     "next-redux-wrapper": "^7.0.5",
     "os": "^0.1.2",
     "path": "^0.12.7",
+    "preval.macro": "^5.0.0",
     "react": "17.0.2",
     "react-bootstrap": "2.1.2",
     "react-dom": "17.0.2",
@@ -74,7 +74,6 @@
     "tailwindcss": "^3.0.23"
   },
   "main": "index.js",
-  "repository": "https://github.com/aolamide/poulina.git",
-  "author": "MetaBoy <86504841+MetaBoy8@users.noreply.github.com>",
+  "repository": "https://github.com/XedgeIT/paybymint-marketplace.git",
   "license": "MIT"
 }
